--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,5 +6,5 @@ jobs:
     hello_job:
         runs-on: ubuntu-latest
         steps:
-            - name: Echo Text
-              run: echo "Hello, world"
+            - name: Echo text
+              run: 'echo "Hello, world!"'
